# airport-management-system

./: config.txt  pyproject.toml  requirements.txt
AirportWebsite/: manage.py
AirportWebsite/AirportWebsite/: asgi.py  settings.py  urls.py  wsgi.py
AirportWebsite/main/: urls.py  views.py
AirportWebsite/main/static/: css2  css2-1  css2-2
AirportWebsite/main/static/assets/css/: style.css
AirportWebsite/main/static/assets/js/: functions.js
AirportWebsite/templates/: account-bookings.html  account-delete.html  account-profile.html  account-settings.html  add-listing-minimal.html  add-listing.html  admin-agent-detail.html  admin-agent-list.html  admin-dashboard.html  admin-guest-list.html  agent-bookings.html  agent-dashboard.html  agent-listings.html  booking-confirm.html  error.html  flight-booking.html  flight-detail-raw.html  flight-detail.html  flight-list.html  index-flight.html  index.html  listing-added.html  listing-added2.html  sign-in.html  sign-up.html  update-listing-minimal.html
sql/: creation.sql  event.sql  insertion1.sql  insertion2.sql  insertion3.sql  insertion4.sql  q1.sql  trig1.sql  trig2.sql  trig3.sql  trig4.sql  trig5.sql  trig6.sql  trig7.sql  trig8.sql  view1.sql  view2.sql  view3.sql  view4.sql  view5.sql  view_join1.sql
