[tool.poetry]
name = "airportwebsite"
version = "0.1.0"
description = ""
authors = ["pratheek-j <73168565+pratheek-j@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
